# BuildingBlocks

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODINGSTYLE.md  ChainBlocker.sln  README.md
AutomatedTests/: AutomatedTests.vcxproj  test.cpp
ChainBlocker/: CMakeLists.txt  ChainBlocker.cpp  ChainBlocker.vcxproj  ChainBlocker.vcxproj.filters  main.cpp
ChainBlockerLibrary/: Base64.cpp  Base64.h  Block.cpp  Block.h  BlockFile.cpp  BlockFile.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  ChainBlockerLibrary.vcxproj  ChainBlockerLibrary.vcxproj.filters  CryptographicKey.cpp  CryptographicKey.h  CryptographicKeyPair.h  Cryptography.cpp  Cryptography.h  OpenSslPointers.h  Transaction.cpp  Transaction.h  Wallet.cpp  Wallet.h  chainblocker.cpp  chainblocker.h  sha256.cpp
DevelopmentTools/: build.cmd
SourceCode/: CMakeLists.txt  CMakeSettings.json  ChainBlocker.sln
SourceCode/AutomatedTests/: AutomatedTests.vcxproj  CMakeLists.txt  packages.config  test.cpp
SourceCode/ChainBlocker/: CMakeLists.txt  ChainBlocker.vcxproj  main.cpp
SourceCode/ChainBlockerLibrary/: AlgorythmType.h  Base64.cpp  Base64.h  Block.cpp  Block.h  BlockFile.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  ChainBlockerLibrary.vcxproj  ChainBlockerLibrary.vcxproj.filters  CryptographicKey.cpp  CryptographicKey.h  CryptographicKeyPair.h  Cryptography.cpp  Cryptography.h  ExposureType.h  OpenSslPointers.h  PemFormatType.h  Transaction.cpp  Transaction.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h  Wallet.cpp  Wallet.h  chainblocker.h  dllmain.cpp  framework.h  sha256.cpp  sha256.h
SourceCode/DevelopmentTools/Commands/: build.cmd
SourceCode/TestConsole/: TestConsole.cpp  TestConsole.vcxproj
UnitTests/: UnitTests.vcxproj
